ModuleEntity<generics> and module tooltips.